# ESPE2604-OOPSW30812

./: .gitignore  Composite.ts.code-workspace  README.md  StoreApp.py  Untitled0.ipynb
01Definition/: README.md
exams/artieda/: README.md
exams/codena/: README.md
exams/collahuazo/: README.md
exams/nacato/: README.md
exams/nase/: README.md
exams/tipan/: README.md
exams/tipantiza/: README.md
exams/vizcaino/: README.md
hw/aimacana/: README.md
hw/alban/: README.md
hw/basurto/: README.md
hw/codena/: README.md
hw/codena/u3/hw22MazeDiagramClass/Code/Python/maze_generator/: README.md  main.py  pyproject.toml
hw/codena/u3/hw22MazeDiagramClass/Code/Python/maze_generator/src/maze_generator/: app.py
hw/codena/u3/hw22MazeDiagramClass/Code/Python/maze_generator/src/maze_generator/controller/: __init__.py  i_draw.py  i_maze_generator.py  maze_controller.py  maze_generator_controller.py  random_generator.py
hw/codena/u3/hw22MazeDiagramClass/Code/Python/maze_generator/src/maze_generator/model/: __init__.py  adjacent_door.py  cardinal_direction.py  coordinate.py  door.py  entrance_door.py  exit_door.py  maze.py  path.py  room.py  wall.py
hw/codena/u3/hw22MazeDiagramClass/Code/Python/maze_generator/src/maze_generator/view/: __init__.py  console_maze.py  frm_gui_maze.py  frm_maze.py  frm_maze_generator.py  maze_view_type.py
hw/codena/u3/hw22MazeDiagramClass/Code/Python/maze_generator/tests/: conftest.py  test_controller.py  test_model.py
hw/lomas/: README.md
hw/nase/: README.md
my-fresh-copy/: .gitignore  students.txt
u2/: README.md
(+5660 files in other folders)
